- replace URI / URL / Locale deprecations